--- a/Sebastian_Nicholas_Assignment2/public/products_display.html
+++ b/Sebastian_Nicholas_Assignment2/public/products_display.html
@@ -1,6 +1,6 @@
 <!--Nicholas Sebatian-->
 <!--Loads product array from json file-->
-<script src="/products_data.json"></script>
+<script src="./products_data.json"></script>
 
 <!DOCTYPE html>
 <html>
