--- a/Sebastian_Nicholas_Assignment2/public/register.html
+++ b/Sebastian_Nicholas_Assignment2/public/register.html
@@ -1,140 +1,82 @@
 <!-- Nicholas Sebastian -->
-<!-- Registration page for users -->
-
-<script>
-    var params = (new URL(document.location)).searchParams; 
-    var login_action = "login.html";
-    //Keeps the quantities around for login only .
-    login_action += params; 
-
-    //Keeps the quantities around for register only.
-    var registration_action = "register.html";
-    registration_action += params; 
-</script>
+<!-- Register Page for the Site -->
 
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register Page</title>
+  <script>
+    //try to get the register errors and if the user enter bad information,give a alert, then put the bad information back and let them change it
+    let params = (new URL(document.location)).searchParams;
+    window.onload = function () {
+      if (params.has('reg_errors')) {
+        var errors = JSON.parse(params.get('reg_errors'));
+        console.log("invalid");
+        // make register form sticky
+        for (i = 0; i < register.elements.length; i++) {
+          register[i].value = params.get(register[i].name);
+          if (typeof errors[register[i].name] != 'undefined') {
+            document.getElementById(register[i].name + '_error').innerHTML = errors[register[i].name];
+          }
+        }
+        alert('Please fix the following errors!');
+      }
+    }
+  </script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Registration page</title>
+  <link rel="stylesheet" href="register.css">
+
 </head>
 
 <body>
-    <div class=container>
-        <div class=login_card>
-            <div class=header>Register</div>
 
-            <script> 
-                //Submits to itself (with the quantities in the query string) so that it can be carried through once it redirects to the login page again. 
-                document.write(`<form name = "registration_fields" action=${registration_action} method="POST">`) 
-            </script>
+  <form action="/process_register" method="POST" name="register">
+    <div class="container">
+      <h1>Register</h1>
+      <hr>
 
-            <input type="text" name="name" size="40" placeholder="Full Name"><br>
-            <script>
-                //Selecting which error message to display depending on the error received from server-side
-                if (params.get("name_error") == "true") {  //Left name field blank
-                    document.write(`<div class= invalid_input>Enter your full name</div>`);
-                } else if (params.get("name_syntax_error") == "true") { //Tried to use a special character
-                    document.write(`<div class= invalid_input>Only letters allowed!</div>`); 
-                } else if (params.get("name_length_error") == "long") { //Put in a value that is too long
-                    document.write(`<div class= invalid_input>Must be less than 30 characters long</div>`);
-                } else {
-                    document.write("<br>"); //Maintains similar spacing to when there is no message
-                }
-            </script>
+      <label for="fullname" size="30"><b>Full Name</b></label>
+      <div id='fullname_error' style="color: orangered;"></div>
+      <input type="text" placeholder="Enter first and last name" class="form__input" name="fullname" id="fullname">
 
-            <input type="text" name="email" size="40" placeholder="Email Address"><br>
 
-            <script>
-                //Selecting which error message to display depending on the error received from server-side
-                if (params.get("email_error") == "true") { //Left the email field blank
-                    document.write(`<div class= invalid_input>Enter a valid email</div>`);
-                } else if (params.get("email_format_error") == "true") { //Wrong formatting
-                    document.write(`<div class= invalid_input>Proper formatting required (e.g., user@gmail.com)</div>`);
-                } else {
-                    document.write("<br>"); //Maintains similar spacing to when there is no message
-                }
-            </script>
-            <input type="text" name="username" size="40" placeholder="Create a Username"><br>
-            <script>
-                //Selecting which error message to display depending on the error received from server-side
-                if (params.get("username_error") == "true") {
-                    //Left the field blank
-                    document.write(`<div class= invalid_input>Enter a username</div>`); 
-                } else if (params.get("username_syntax_error") == "true") {
-                    //Tried to use a special character
-                    document.write(`<div class= invalid_input>Only letters and numbers allowed!</div>`); 
-                } else if (params.get("username_length_error") == "short") {
-                    //Username was too short
-                    document.write(`<div class= invalid_input>Username must be at least 4 characters</div>`); 
-                } else if (params.get("username_length_error") == "long") {
-                    //Username was too long
-                    document.write(`<div class= invalid_input>Username must be less than 10 characters</div>`); 
-                } else if (params.get("username_exists") == "true") {
-                    //Username already exists in file.
-                    document.write(`<div class= invalid_input>Username already taken!</div>`); 
-                } else {
-                    document.write("<br>"); 
-                };
-            </script>
-            <input type="password" name="password" size="40" placeholder="Create a Password"><br>
-            <script>
-                //Selecting which error message to display depending on the error received from server-side
-                if (params.get("password_error") == "true") {
-                    //Left the field blank
-                    document.write(`<div class= invalid_input>Enter a password</div>`); 
-                } else if (params.get("password_length_error") == "short") {
-                    //Password is too short
-                    document.write(`<div class= invalid_input>Password must be at least 6 characters</div>`); 
-                } else {
-                    document.write("<br>"); 
-                };
-            </script>
-            <input type="password" name="reentered_password" size="40" placeholder="Confirm Password"><br>
-            <script>
-                //Selecting which error message to display depending on the error received from server-side
-                if (params.get("password_match_error") == "true") {
-                    //The repeat-password doesn't match the original password.
-                    document.write(`<div class= invalid_input>Passwords don't match</div>`); 
-                } else {
-                    document.write("<br>"); 
-                };
-            </script>
-            <input name="create_account_button_name" type="submit" value="Create An Account" id="submit">
-            </form>
-        </div>
-        <div class=already_have_account>
-            Already a user?
-            <script>
-                //Link to return back to the login page without having to register.
-                document.write(`<a href=${login_action}>Login in</a>`)
-            </script>
-        </div>
+      <label for="username"><b>Username</b></label>
+      <div id='username_error' style="color: orangered;"></div>
+      <input type="text" placeholder="Enter Username" class="form__input" name="username" id="username">
+
+
+      <label for="email"><b>Email</b></label>
+      <div id='email_error' style="color: orangered;"></div>
+      <input type="text" placeholder="Enter Email" name="email" id="email">
+
+
+      <label for="password"><b>Password</b></label>
+      <div id='password_error' style="color: orangered;"></div>
+      <input type="password" placeholder="Enter Password" class="form__input" name="password" id="password">
+
+
+
+      <label for="repeat_password"><b>Repeat Password</b></label>
+      <div id='repeat_password_error' style="color: orangered;"></div>
+      <input type="password" placeholder="Repeat Password" class="form__input" name="repeat_password"
+        id="repeat_password">
+
+      <button type="submit" class="registerbtn">Register</button>
+
     </div>
+
+    <div class="container signin">
+      <p>Already have an account? <a href="login.html">Sign in</a>.</p>
+    </div>
+    
+  </form>
 </body>
-
-<script>
-    //These create the sticky textboxes
-    //Gets the values from the query string
-    var username = params.get("username"); 
-    var email = params.get("email");
-    var full_name = params.get("name");
-
-    //Puts the values into the textboxes again after post method
-    if (params.get("attempted_registration") == "true") {
-        registration_fields["name"].value = name;
-        registration_fields["email"].value = email;
-        registration_fields["username"].value = username;
-        //changes the value of the registration button to continue after a failed attempt to register
-        registration_fields["create_account_button_name"].value = "Continue"; 
-    };
-
-</script>
     <br>
     <!-- Button that allows the user to go back to the products page -->
     <input type="button" class="button" value="Back To Store" onclick="window.location.href = 'index.html';">
     <br>
 </html>
+   
