--- a/Sebastian_Nicholas_Assignment2/public/invoice.html
+++ b/Sebastian_Nicholas_Assignment2/public/invoice.html
@@ -4,7 +4,8 @@
 <link href="invoice.css" rel="stylesheet" />
 
 <!-- Loads product array from json file -->
-<script src="/products_data.json"></script>
+<script src="products_data.json"></script>
+<script src="/Assignments/Nicholas_Sebastian_Assignment2/user_data.json" type="json"></script>
 
 <script>
     // Load params
