--- a/Sebastian_Nicholas_Assignment2/public/login.html
+++ b/Sebastian_Nicholas_Assignment2/public/login.html
@@ -66,7 +66,7 @@
         width: 100%;
       }
 
-      /* Add a hover effect for buttons */
+      /* Adds the hover effect for buttons */
       button:hover {
         opacity: 0.8;
       }
@@ -107,11 +107,11 @@
           display: block;
           float: none;
         }
-
         .cancelbtn {
           width: 100%;
         }
       }
+      
     </style>
     <form action="/process_login" method="POST" name="login_form">
       <div class="container">
