--- a/Sebastian_Nicholas_Assignment2/public/register.html
+++ b/Sebastian_Nicholas_Assignment2/public/register.html
@@ -3,16 +3,15 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <script>
-    //try to get the register errors and if the user enter bad information,give a alert, then put the bad information back and let them change it
+    // Checkes for erros from previous page
     let params = (new URL(document.location)).searchParams;
     window.onload = function () {
       if (params.has('reg_errors')) {
         var errors = JSON.parse(params.get('reg_errors'));
         console.log("invalid");
-        // make register form sticky
+        // Makes the register form sticky
         for (i = 0; i < register.elements.length; i++) {
             register[i].value = params.get(register[i].name);
                  if (typeof errors[register[i].name] != 'undefined') {
@@ -36,28 +35,27 @@
         <div class="container">
             <h1>Register</h1>
             <hr>
-        
+            <!-- Full Name -->
             <label for="fullname" size="30"><b>Full Name</b></label>
             <div id='fullname_error' style="color: orangered;"></div>
             <input type="text" placeholder="Enter first and last name" class="form__input" name="fullname" id="fullname">
 
-
+            <!-- Username -->
             <label for="username"><b>Username</b></label>
             <div id='username_error' style="color: orangered;"></div>
             <input type="text" placeholder="Enter Username" class="form__input" name="username" id="username">
 
-
+            <!-- Email Address -->
             <label for="email"><b>Email</b></label>
             <div id='email_error' style="color: orangered;"></div>
             <input type="text" placeholder="Enter Email" name="email" id="email">
 
-
+            <!-- Password -->
             <label for="password"><b>Password</b></label>
             <div id='password_error' style="color: orangered;"></div>
             <input type="password" placeholder="Enter Password" class="form__input" name="password" id="password">
 
-
-
+            <!-- Password Conformation -->
             <label for="repeat_password"><b>Repeat Password</b></label>
             <div id='repeat_password_error' style="color: orangered;"></div>
             <input type="password" placeholder="Repeat Password" class="form__input" name="repeat_password"
@@ -67,7 +65,8 @@
     </div>
 
     <div class="container signin">
-      <p>Already have an account? <a href="login.html">Sign in</a>.</p>
+        <!-- Redirects to Login Page -->
+        <p>Already have an account? <a href="login.html">Sign in</a>.</p>
     </div>
   </form>
 
