--- a/Sebastian_Nicholas_Assignment2/public/products_display.html
+++ b/Sebastian_Nicholas_Assignment2/public/products_display.html
@@ -97,7 +97,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
                 </main>
             </div>
                 <!--Button to submit to the invoice-->
-                <br><input type="submit" class="button" value="Cart" id="submit" name="purchase_submit">
+                <br><input type="submit" class="button" value="Cart" id="submit" name="purchase">
             </form>
   
   <hr id="about">
