--- a/Sebastian_Nicholas_Assignment2/public/index.html
+++ b/Sebastian_Nicholas_Assignment2/public/index.html
@@ -45,7 +45,7 @@
     <!-- Have to close <a> or the picture wont lead to the next page-->
     </a>
     
-    <h1> Welcome to the Shoe Store </h1>
+    <h1> Welcome to the Shoe Bank </h1>
 
 </body>
 </html>
