--- a/Sebastian_Nicholas_Assignment2/public/products_display.html
+++ b/Sebastian_Nicholas_Assignment2/public/products_display.html
@@ -65,6 +65,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">Index</a>
   <a href="register.html" onclick="w3_close()" class="w3-bar-item w3-button">Register</a>
   <a href="login.html" onclick="w3_close()" class="w3-bar-item w3-button">Login</a>
+  <a href="invoice.html" onclick="w3_close()" class="w3-bar-item w3-button">Invoice</a>
 </nav>
 
 <!-- Top menu -->
