--- a/Sebastian_Nicholas_Assignment2/public/invoice.html
+++ b/Sebastian_Nicholas_Assignment2/public/invoice.html
@@ -151,7 +151,7 @@
         <br>
         <!-- Quantities -->
         <tr>
-            <td style="text-align: center;font-family: sans-serif;" colspan="3" width="67%"> Quantitie </td>
+            <td style="text-align: center;font-family: sans-serif;" colspan="3" width="67%"> Quantity </td>
             <td width="54%">
                 <script>document.write(total_qua);</script>
             </td>
