--- a/Sebastian_Nicholas_Assignment3/public/login.html
+++ b/Sebastian_Nicholas_Assignment3/public/login.html
@@ -1,15 +1,142 @@
 <!-- Author Nicholas Sebastian -->
 <!-- Login page for Website -->
+<script src="/Sebastian_Nicholas_Assignment2/user_data.json" type="json"></script>
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+  <script>
+    //let the users know if they have errors on username or password
+    let params = (new URL(document.location)).searchParams;
+    window.onload = function () {
+      if (params.has('LoginError')) {
+        // Alert the user if there are any loing errors
+        alert(params.get('LoginError'));
+      }
+      if (params.has('username')) {
+        usernameid.value = params.get('username')
+      }
+    }
+  </script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login Page</title>
 </head>
+
 <body>
+  <div class="imgcontainer">
     
+    <style>
+      aside {
+        display: flex;
+        align-items: stretch;
+        background: no-repeat 50% center;
+        padding: 50px 0;
+      }
+
+      /* Bordered form */
+      body {
+        font-family: Arial, Helvetica, sans-serif;
+      }
+
+      form {
+        border: 3px solid #f1f1f1;
+      }
+
+      /* Full-width inputs */
+      input[type=text],
+      input[type=password] {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        box-sizing: border-box;
+      }
+
+      /* Set a style for all buttons */
+      button {
+        background-color: rgb(67, 24, 221);
+        color: white;
+        padding: 14px 20px;
+        margin: 4px 0;
+        border: auto;
+        cursor: pointer;
+        width: 100%;
+      }
+
+      /* Adds the hover effect for buttons */
+      button:hover {
+        opacity: 0.8;
+      }
+
+      /* Extra style for the cancel button (red) */
+      .cancelbtn {
+        width: auto;
+        padding: 10px 18px;
+        background-color: tan;
+      }
+
+      /* Center the avatar image inside this container */
+      .imgcontainer {
+        text-align: center;
+        margin: 24px 0 12px 0;
+      }
+
+      /* Avatar image */
+      img.avatar {
+        width: 40%;
+        border-radius: 50%;
+      }
+
+      /* Add padding to containers */
+      .container {
+        padding: 16px;
+      }
+
+      /* The "Forgot password" text */
+      span.psw {
+        float: right;
+        padding-top: 16px;
+      }
+
+      /* Change styles for span and cancel button on extra small screens */
+      @media screen and (max-width: 300px) {
+        span.psw {
+          display: block;
+          float: none;
+        }
+        .cancelbtn {
+          width: 100%;
+        }
+      }
+
+    </style>
+    <form action="/process_login" method="POST" name="login_form">
+      <div class="container">
+        <label for="username"><b>Username</b></label>
+        <input id="usernameid" type="text" placeholder="Enter Username" name="username"
+          onchange='this.value=this.value.toLowerCase();' required>
+
+        <label for="password"><b>Password</b></label>
+        <input type="password" placeholder="Enter Password" name="password" required>
+
+        <button class="log-in" type="submit" value="Login" name="login"> Login </button>
+
+        <input type="button" onClick="location.href='index.html'" class="cancelbtn" value='Cancel'>
+      </div>
+
+      <div>
+        <script>
+          // If user does not have a account yet, they can click the text Sign Up Now in order to register.
+          document.write(`<p><center>Don't haven an account with us? <a href="register.html${location.search}"> Sign Up Now!</a>.</p></center>`);
+        </script>
+      </div>
+    </form>
 </body>
+    <br>
+    <!-- Button that allows the user to go back to the products page -->
+    <input type="button" class="button" value="Back To Store" onclick="window.location.href = 'index.html';">
+    <br>
 </html>
