--- a/Sebastian_Nicholas_Assignment3/public/products_display.html
+++ b/Sebastian_Nicholas_Assignment3/public/products_display.html
@@ -62,6 +62,8 @@ let params = (new URL(document.location)).searchParams;
   <a href="" onclick="w3_close()" class="w3-bar-item w3-button">Shorts</a>
   <a href="" onclick="w3_close()" class="w3-bar-item w3-button">Accessories</a>
   <br>
+  <!-- Shopping Cart -->
+  <a href="" onclick="w3_close()" class="w3-bar-item w3-button">Cart </a>
   <!-- Register -->
   <a href="" onclick="w3_close()" class="w3-bar-item w3-button">Sign-Up</a>
   <!-- Login -->
@@ -126,7 +128,7 @@ let params = (new URL(document.location)).searchParams;
 
 <!------------------------------------------------------------------------------>
 
-  <!-- Pagination -->
+  
   <!-- Might Want to use this to show all products on different pages -->
   <!-- Can also be used to navigate to other accessory Pages-->
   <div class="w3-center w3-padding-32">
@@ -233,3 +235,16 @@ function w3_close() {
 
 </body>
 </html>
+
+<script>
+  function isNonNegInt(q, returnErrors = false) {
+    errors = []; // assume no errors at first
+    if (q == '') q = 0;
+    if (Number(q) != q) errors.push('Not a number!'); // Check if string is a number value
+    else {
+      if (q < 0) errors.push('Negative value!'); // Check if it is non-negative
+      if (parseInt(q) != q) errors.push('Not an integer!'); // Check that it is an integer
+    }
+    return returnErrors ? errors : (errors.length == 0);
+  };
+</script>
