--- a/Sebastian_Nicholas_Assignment3/public/register.html
+++ b/Sebastian_Nicholas_Assignment3/public/register.html
@@ -4,12 +4,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register Page</title>
+    <script>
+    // Checkes for erros from previous page
+    let params = (new URL(document.location)).searchParams;
+    window.onload = function () {
+    if (params.has('reg_errors')) {
+        var errors = JSON.parse(params.get('reg_errors'));
+        console.log("invalid");
+        // Makes the register form sticky
+    for (i = 0; i < register.elements.length; i++) {
+            register[i].value = params.get(register[i].name);
+                 if (typeof errors[register[i].name] != 'undefined') {
+                    document.getElementById(register[i].name + '_error').innerHTML = errors[register[i].name];
+                 }
+        }
+        alert('Please fix the following errors!');
+      }
+    }
+    </script>
+
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Registration page</title>
+
 </head>
+
 <body>
-    
+    <form action="/process_register" method="POST" name="register">
+        <div class="container">
+            <h1>Register</h1>
+            <hr>
+            <!-- Full Name -->
+            <label for="fullname" size="30"><b>Full Name</b></label>
+            <div id='fullname_error' style="color: orangered;"></div>
+            <input type="text" placeholder="Enter first and last name" class="form__input" name="fullname" id="fullname">
+
+            <!-- Username -->
+            <label for="username"><b>Username</b></label>
+            <div id='username_error' style="color: orangered;"></div>
+            <input type="text" placeholder="Enter Username" class="form__input" name="username" id="username">
+
+            <!-- Email Address -->
+            <label for="email"><b>Email</b></label>
+            <div id='email_error' style="color: orangered;"></div>
+            <input type="text" placeholder="Enter Email" name="email" id="email">
+
+            <!-- Password -->
+            <label for="password"><b>Password</b></label>
+            <div id='password_error' style="color: orangered;"></div>
+            <input type="password" placeholder="Enter Password" class="form__input" name="password" id="password">
+
+            <!-- Password Conformation -->
+            <label for="repeat_password"><b>Repeat Password</b></label>
+            <div id='repeat_password_error' style="color: orangered;"></div>
+            <input type="password" placeholder="Repeat Password" class="form__input" name="repeat_password"
+                id="repeat_password">
+
+        <button type="submit" class="registerbtn">Register</button>
+    </div>
+
+    <div class="container signin">
+        <!-- Redirects to Login Page -->
+        <p>Already have an account? <a href="login.html">Sign in</a>.</p>
+    </div>
+  </form>
+
 </body>
+    <br>
+    <!-- Button that allows the user to go back to the products page -->
+    <input type="button" class="button" value="Back To Store" onclick="window.location.href = 'products_display.html';">
+    <br>
 </html>
+   
