--- a/Sebastian_Nicholas_Assignment3/public/login.html
+++ b/Sebastian_Nicholas_Assignment3/public/login.html
@@ -115,8 +115,8 @@
     </style>
     <form action="/process_login" method="POST" name="login_form">
       <div class="container">
-        <label for="username"><b>Username</b></label>
-        <input id="usernameid" type="text" placeholder="Enter Username" name="username"
+        <label for="email"><b>Email</b></label>
+        <input id="email" type="text" placeholder="Enter email" name="email"
           onchange='this.value=this.value.toLowerCase();' required>
 
         <label for="password"><b>Password</b></label>
