--- a/Sebastian_Nicholas_Assignment3/public/index.html
+++ b/Sebastian_Nicholas_Assignment3/public/index.html
@@ -7,7 +7,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shoe Store Home Page</title>
+
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
+    <style>
+    body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
+    .w3-bar-block .w3-bar-item {padding:20px}
+    </style>
+
+
+    <title>Adidas Ecommerence Site </title>
 
     <style>
     /*Style of the page*/
@@ -31,9 +40,34 @@
 
 <!-- User interaction with page-->
 <body>
+
+    <!-- Sidebar (hidden by default) -->
+    <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
+    <a href="javascript:void(0)" onclick="w3_close()"
+    class="w3-bar-item w3-button">Close</a>
+    <!-- Sidebar Links to other Pages -->
+  
+    <!-- Index -->
+    <a href="" onclick="w3_close()" class="w3-bar-item w3-button">Home</a>
+  
+    <!-- Products -->
+    <a href="" onclick="w3_close()" class="w3-bar-item w3-button">Shoes</a>
+    <a href="" onclick="w3_close()" class="w3-bar-item w3-button">Shirts</a>
+    <a href="" onclick="w3_close()" class="w3-bar-item w3-button">Shorts</a>
+    <a href="" onclick="w3_close()" class="w3-bar-item w3-button">Accessories</a>
+    <br>
+    <!-- Shopping Cart -->
+    <a href="" onclick="w3_close()" class="w3-bar-item w3-button">Cart </a>
+    <!-- Register -->
+    <a href="" onclick="w3_close()" class="w3-bar-item w3-button">Sign-Up</a>
+    <!-- Login -->
+    <a href="" onclick="w3_close()" class="w3-bar-item w3-button">Login</a>
+    </nav>
+
+
     <!-- Store Title -->
     <h1>
-        Nick's Shoe Locker
+        Adidas 
     </h1>
 
     <!-- Link to Store Products_display-->
@@ -45,7 +79,7 @@
     <!-- Have to close <a> or the picture wont lead to the next page-->
     </a>
     
-    <h1> Welcome to the Shoe Bank </h1>
+    <h1> By: Nicholas Sebastian </h1>
 
 </body>
 </html>
