--- a/Sebastian_Nicholas_Assignment3/public/products_display.html
+++ b/Sebastian_Nicholas_Assignment3/public/products_display.html
@@ -149,7 +149,10 @@ let params = (new URL(document.location)).searchParams;
      
     </div>
   </div>
-  
+  <div>
+    <label>Add to</label>
+    <input type="submit" name="purchase_order" value="Cart" Purchase>
+  </div>
 
 <!------------------------------------------------------------------------------>
 
