--- a/Sebastian_Nicholas_Assignment3/public/login.html
+++ b/Sebastian_Nicholas_Assignment3/public/login.html
@@ -113,7 +113,7 @@
       }
 
     </style>
-    <form action="/process_login" method="POST" name="login_form">
+    <form action="./login" method="POST" name="login_form">
       <div class="container">
         <label for="email"><b>Email</b></label>
         <input id="email" type="text" placeholder="Enter email" name="email"
@@ -137,6 +137,6 @@
 </body>
     <br>
     <!-- Button that allows the user to go back to the products page -->
-    <input type="button" class="button" value="Back To Store" onclick="window.location.href = 'index.html';">
+    <input type="button" class="button" value="Home" onclick="window.location.href = 'Products_display.html';">
     <br>
 </html>
