--- a/Sebastian_Nicholas_Assignment3/public/register.html
+++ b/Sebastian_Nicholas_Assignment3/public/register.html
@@ -31,7 +31,96 @@
 </head>
 
 <body>
-    <form action="/process_register" method="POST" name="register">
+
+    <style>
+        aside {
+          display: flex;
+          align-items: stretch;
+          background: no-repeat 50% center;
+          padding: 50px 0;
+        }
+  
+        /* Bordered form */
+        body {
+          font-family: Arial, Helvetica, sans-serif;
+        }
+  
+        form {
+          border: 3px solid #f1f1f1;
+        }
+  
+        /* Full-width inputs */
+        input[type=text],
+        input[type=password] {
+          width: 100%;
+          padding: 12px 20px;
+          margin: 8px 0;
+          display: inline-block;
+          border: 1px solid #ccc;
+          box-sizing: border-box;
+        }
+  
+        /* Set a style for all buttons */
+        button {
+          background-color: rgb(67, 24, 221);
+          color: white;
+          padding: 14px 20px;
+          margin: 4px 0;
+          border: auto;
+          cursor: pointer;
+          width: 100%;
+        }
+  
+        /* Adds the hover effect for buttons */
+        button:hover {
+          opacity: 0.8;
+        }
+  
+        /* Extra style for the cancel button (red) */
+        .cancelbtn {
+          width: auto;
+          padding: 10px 18px;
+          background-color: tan;
+        }
+  
+        /* Center the avatar image inside this container */
+        .imgcontainer {
+          text-align: center;
+          margin: 24px 0 12px 0;
+        }
+  
+        /* Avatar image */
+        img.avatar {
+          width: 40%;
+          border-radius: 50%;
+        }
+  
+        /* Add padding to containers */
+        .container {
+          padding: 16px;
+        }
+  
+        /* The "Forgot password" text */
+        span.psw {
+          float: right;
+          padding-top: 16px;
+        }
+  
+        /* Change styles for span and cancel button on extra small screens */
+        @media screen and (max-width: 300px) {
+          span.psw {
+            display: block;
+            float: none;
+          }
+          .cancelbtn {
+            width: 100%;
+          }
+        }
+  
+      </style>
+
+
+    <form action="./register" method="POST" name="register">
         <div class="container">
             <h1>Register</h1>
             <hr>
@@ -39,11 +128,6 @@
             <label for="fullname" size="30"><b>Full Name</b></label>
             <div id='fullname_error' style="color: orangered;"></div>
             <input type="text" placeholder="Enter first and last name" class="form__input" name="fullname" id="fullname">
-
-            <!-- Username -->
-            <label for="username"><b>Username</b></label>
-            <div id='username_error' style="color: orangered;"></div>
-            <input type="text" placeholder="Enter Username" class="form__input" name="username" id="username">
 
             <!-- Email Address -->
             <label for="email"><b>Email</b></label>
@@ -73,7 +157,7 @@
 </body>
     <br>
     <!-- Button that allows the user to go back to the products page -->
-    <input type="button" class="button" value="Back To Store" onclick="window.location.href = 'products_display.html';">
+    <input type="button" class="button" value="Home" onclick="window.location.href = 'products_display.html';">
     <br>
 </html>
    
